--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.18"
+    "react-hot-loader": "^4.12.18",
+    "particles-bg": "^2.3.12",
+    "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27",
+    "react-typical": "^0.1.3"
   },
   "devDependencies": {
     "webpack": "^4.41.2",
