--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
+    "react-router-dom": "^5.1.2",
     "particles-bg": "^2.3.12",
     "react-scripts": "3.2.0",
     "react-spring": "^8.0.27",
